Updated csv file location

--- a/create_index.ipynb
+++ b/create_index.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "docs = []\n",
-    "df_pre = pd.read_csv(\"data.csv\").dropna()\n",
+    "df_pre = pd.read_csv(\"./data/uscis.csv\").dropna()\n",
     "for row in range(len(df_pre)):\n",
     "    row_data = df_pre.iloc[row]\n",
     "    heading = row_data.heading\n",
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0fdf18de3004c0aae9da1d9340661a3",
+       "model_id": "81b3511ff4c04f04b7116c56958a1d65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,12 +104,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4f5197ce1b14ef486e59d0ffcb3de29",
+       "model_id": "787378e295034ae68a260733998fa741",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating embeddings:   0%|          | 0/4184 [00:00<?, ?it/s]"
+       "Generating embeddings:   0%|          | 0/4188 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
