--- a/evals.ipynb
+++ b/evals.ipynb
@@ -16,7 +16,33 @@
     "import numpy as np\n",
     "import google.auth\n",
     "import pandas as pd\n",
-    "import nest_asyncio"
+    "import nest_asyncio\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_file():\n",
+    "    key_path = st.secrets[\"JSON_PATH\"]\n",
+    "    with open(key_path, \"w+\") as f:\n",
+    "        creds = {\n",
+    "            \"type\": st.secrets[\"type\"],\n",
+    "            \"project_id\": st.secrets[\"project_id\"],\n",
+    "            \"private_key_id\": st.secrets[\"private_key_id\"],\n",
+    "            \"private_key\": st.secrets[\"private_key\"],\n",
+    "            \"client_email\": st.secrets[\"client_email\"],\n",
+    "            \"client_id\": st.secrets[\"client_id\"],\n",
+    "            \"auth_uri\": st.secrets[\"auth_uri\"],\n",
+    "            \"token_uri\": st.secrets[\"token_uri\"],\n",
+    "            \"auth_provider_x509_cert_url\": st.secrets[\"auth_provider_x509_cert_url\"],\n",
+    "            \"client_x509_cert_url\": st.secrets[\"client_x509_cert_url\"],\n",
+    "            \"universe_domain\": st.secrets[\"universe_domain\"]\n",
+    "        }\n",
+    "        json.dump(creds, f)"
    ]
   },
   {
@@ -26,6 +52,7 @@
    "outputs": [],
    "source": [
     "# Authenticate with Google Cloud\n",
+    "write_file()\n",
     "key_path = st.secrets[\"JSON_PATH\"]\n",
     "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = key_path\n",
     "credentials, project_id = google.auth.default()\n",
@@ -650,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
